[gd_scene load_steps=3 format=3 uid="uid://buetpwsk1vsml"]

[ext_resource type="Script" path="res://Scenes/SongPlayer/song_player.gd" id="1_ng8xq"]
[ext_resource type="AudioStream" uid="uid://bvb3hovpnm1if" path="res://Songs/EverybodyLovesMyBaby/everybody_loves_my_baby.mp3" id="2_ef4n7"]

[node name="SongPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ng8xq")

[node name="TextInterface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextDisplay" type="Label" parent="TextInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40

[node name="CPUText" type="Label" parent="TextInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="PlayerText" type="Label" parent="TextInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.152
offset_top = 150.0
offset_right = 0.303955
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="SharedText" type="Label" parent="TextInterface"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.152
offset_top = 150.0
offset_right = 0.303955
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 40

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ef4n7")
autoplay = true
